<resources>
    <string name="app_name">AndroidPhotos</string>

    <!-- Home Page -->
    <!-- Temporary list of albums -->
    <string name="AlbumListLabel">Album List</string>
    <string name="createButton">Create</string>
    <!-- Buttons on home page -->
    <string name="renameButton">Rename</string>
    <string name="deleteButton">Delete</string>
    <string name="openButton">Open Album</string>
    <string name="searchButton">Search</string>
    <string name="albumNameLabel">Album Name:</string>
    <!-- Labels in create and rename-->
    <string name="createLabel">Create</string>
    <string name="renameLabel">Rename</string>
    <string name="cancelLabel">Cancel</string>
    <string name="createPhotoLabel">Photo Name:</string>
    <string name="addPhotoButton">Add Photo</string>

    <!-- Open Album Page -->
    <!-- Buttons in open album page -->
    <string name="removePhotoButton">Remove Photo</string>
    <string name="displayPhotoButton">Display Photo</string>
    <string name="PhotoListLabel">Photo List</string>
    <!-- Temporary list of photos -->
    <string name="tagTypeLabel">Tag Type:</string>
    <string name="tagLabel">Tag:</string>

    <!-- Search Photo Page -->
    <!-- Spinner List (Person & Location) -->
    <string name="conjunctionTypeLabel">Conjunction:</string>
    <!-- Tag Type Label -->
    <string name="searchPhotosButton">Search</string>
    <!-- Tag Label -->
    <string name="title_activity_create_album">CreateAlbum</string>
    <!-- Conjunction type List -->
    <string name="first_fragment_label">First Fragment</string>
    <!-- Conjunction type Label -->
    <string name="second_fragment_label">Second Fragment</string>
    <!-- Search Button-->
    <string name="next">Next</string>

    <!-- Display Photo Page -->
    <!-- Tags List-->
    <string name="tags">Tags</string>
    <string name="tagtype">Tag Type:</string>
    <string name="addTagButton">Add Tag</string>
    <string name="RemoveTagButton">Remove Tag</string>
    <string name="slideShowButton">SlideShow</string>


    <string name="previous">Previous</string>
    <!-- Strings used for fragments for navigation -->
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_rename_album">RenameAlbum</string>
    <string name="title_activity_open_album">OpenAlbum</string>

    <string name="title_activity_search">Search</string>
    <string name="title_activity_add_photo">AddPhoto</string>
    <string name="hello_world">Hello Square World!</string>
    <string-array name="albumList">
        <item>Album1</item>
        <item>Album2</item>
        <item>Album3</item>
        <item>Album4</item>
        <item>Album5</item>
        <item>Album6</item>
        <item>Album7</item>
        <item>Album8</item>
    </string-array>
    <string-array name="photoList">
        <item>Photo1</item>
        <item>Photo2</item>
        <item>Photo3</item>
        <item>Photo4</item>
        <item>Photo5</item>
    </string-array>
    <string-array name="tagType">
        <item>None</item>
        <item>Person</item>
        <item>Location</item>
    </string-array>
    <string-array name="myAlbums">
        <item>Move</item>
        <item>Album 1</item>
        <item>Album 2</item>
    </string-array>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string-array name="conjunctionType">
        <item>AND</item>
        <item>OR</item>
    </string-array>
    <string name="title_activity_dis">dis</string>
    <string name="title_activity_display_photo">DisplayPhoto</string>
    <string name="title_activity_slide_show">SlideShow</string>
</resources>