<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ListView
        android:id="@+id/PhotoList"
        android:choiceMode="singleChoice"
        android:listSelector="@android:color/darker_gray"
        android:layout_width="363dp"
        android:layout_height="276dp"
        android:layout_marginTop="32dp"
        android:entries="@array/photoList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/PhotoListLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.172" />

    <Button
        android:id="@+id/removePhotoButton"
        android:layout_width="156dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:text="@string/removePhotoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PhotoList" />

    <Button
        android:id="@+id/displayPhotoButton"
        android:layout_width="156dp"
        android:layout_height="52dp"
        android:layout_marginTop="60dp"
        android:text="@string/displayPhotoButton"
        app:layout_constraintEnd_toStartOf="@+id/movePhotoButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PhotoList" />

    <Button
        android:id="@+id/addPhotoButton"
        android:layout_width="156dp"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:text="@string/addPhotoButton"
        app:layout_constraintEnd_toStartOf="@+id/removePhotoButton"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PhotoList" />

    <Spinner
        android:id="@+id/movePhotoButton"
        android:layout_width="156dp"
        android:layout_height="52dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="36dp"
        android:background="#FFFFFF"
        android:entries="@array/myAlbums"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PhotoList" />


</androidx.constraintlayout.widget.ConstraintLayout>