<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:padding="20dp">

    <ImageView
        android:id="@+id/upImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!--  Name label -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        android:text="@string/createPhotoLabel" />

    <!-- Name field -->
    <EditText
        android:id="@+id/createText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background" />

    <!--  Buttons for save and cancel -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/albumRename"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="15dp"
            android:background="@color/black"
            android:onClick="create"
            android:text="@string/createLabel"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/albumCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@color/black"
            android:onClick="cancel"
            android:text="@string/cancelLabel"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:backgroundTint="@null" />

    </LinearLayout>
</LinearLayout>